--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "grammy": "^1.32.0",
+    "node-fetch": "^3.3.2",
     "node-schedule": "^2.1.1",
     "nodemon": "^3.1.7"
   }
