--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grammy": "^1.32.0",
     "node-fetch": "^3.3.2",
     "node-schedule": "^2.1.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "sanitize-html": "^2.13.1"
   }
 }
