--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Evgeniy Kvasov",
   "license": "ISC",
   "dependencies": {
+    "@grammyjs/auto-retry": "^2.0.2",
     "dotenv": "^16.4.5",
     "grammy": "^1.32.0",
     "node-fetch": "^3.3.2",
