--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@grammyjs/auto-retry": "^2.0.2",
+    "@grammyjs/conversations": "^1.2.0",
     "@grammyjs/hydrate": "^1.4.1",
     "dotenv": "^16.4.5",
     "grammy": "^1.32.0",
