--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-fetch": "^3.3.2",
     "node-schedule": "^2.1.1",
     "nodemon": "^3.1.7",
-    "sanitize-html": "^2.13.1"
+    "sanitize-html": "^2.13.1",
+    "sqlite3": "^5.1.7"
   }
 }
